--- a/css/style.css
+++ b/css/style.css
@@ -3,20 +3,61 @@ table{
     margin-left: auto;
     margin-right: auto;
     margin-top: 30px;
-    border: 1px solid black;
+    opacity: 0.8;
 }
 
 .cell {
-    border: 1px solid black;
+    background-color: white;
     width: 40px;
     height: 40px;
     text-align: center;
     font-size: 1.5em;
-  }
+ }
 
-  .timer{
+ .cell:hover{
+   cursor: pointer;
+ }
+
+.timer{
     color: tomato;
     display:none;
-    position: absolute;
-    
+    padding-top: 15px;
+    margin: auto;
 }
+
+body{
+  text-align: center;
+  font-family: cursive;
+  background-image: url(../photos/background.webp);
+  background-size: cover;
+  height: 100vh;
+}
+
+
+
+button{
+  font-family: cursive;
+  padding: auto;
+  margin-right: 10px;
+  opacity: 0.8;
+}
+
+button:hover{
+  box-shadow: 0 5px 5px 0 rgba(0,0,0,0.24), 0 17px 50px 0 rgba(0,0,0,0.19);
+  color: rgb(187, 4, 4);
+  cursor: pointer;
+}
+
+button:hover{
+  cursor: pointer;
+}
+
+#shown{
+  background-color: grey;
+  
+}
+
+#flaged{
+  background-color: red;
+}
+
