--- a/css/style.css
+++ b/css/style.css
@@ -28,7 +28,7 @@ table{
   margin: auto;
   margin-top: 15px;
   padding: 10px;
-  opacity: 0.9;
+  opacity: 0.8;
 }
 .lives{
   margin-top: 15px;
@@ -41,14 +41,14 @@ table{
 body{
   text-align: center;
   font-family: cursive;
-  background-image: url(../photos/bomb3.jpg);
+  background-image: url(../photos/field.jpg);
   background-size: cover;
   height: 100vh;
 }
 
 button{
   font-family: cursive;
-  opacity: 0.8;
+  opacity: 0.7;
   margin-bottom: 5px;
 }
 
@@ -81,10 +81,12 @@ button:hover{
   margin-bottom: 5px;
 } */
 h2{
+  color: aliceblue;
   display: none;
   font-size: xx-large;
 }
 h3{
+  color: aliceblue;
   font-size: xx-large;
   display: none;
 }
