--- a/css/style.css
+++ b/css/style.css
@@ -1,23 +1,84 @@
+body{
+  text-align: center;
+  font-family: cursive;
+  background-image: url(../photos/field.jpg);
+  background-repeat: no-repeat;
+  background-size: cover;
+  height: 100vh;
+}
 table{
-    margin:0 auto;
-    margin-left: auto;
-    margin-right: auto;
-    margin-top: 15px;
-    opacity: 0.8;
+  display: inline;
+  margin:0 auto;
+  margin-top: 20px;
+  opacity: 0.8;
 }
 
 .cell {
-    background-color: white;
-    width: 40px;
-    height: 40px;
-    text-align: center;
-    font-size: 1.5em;
- }
+  background-color: white;
+  width: 35px;
+  height: 35px;
+  text-align: center;
+  font-size: 1.5em;
+}
 
- .cell:hover{
-   cursor: pointer;
-   background-color: darkgrey;
- }
+.cell:hover{
+  cursor: pointer;
+  background-color: darkgrey;
+}
+
+.smily{
+  height:fit-content;
+  width:fit-content;
+  background-color: aliceblue;
+  opacity: 0.8;
+  margin: auto;
+  margin-bottom: 10px;
+  margin-top: 15px;
+  padding: 5px;
+  border-radius: 50%;
+  display: inline;
+}
+
+.bestScore{
+  margin-top: 15px;
+  display: inline;
+  float: right;
+  background-color: transparent;
+  color: lightcyan;
+  opacity: 0.8;
+  padding-left: 3px;
+  padding-right: 3px;
+  margin-bottom: 5px;
+  height: 30px;
+  width: 170px;
+}
+
+.lives{
+  margin-top: 15px;
+  background-color: transparent;
+  border:none;
+  color:oldlace;
+  display: inline;
+  float: left;
+  height: 30px;
+  width: 170px;
+}
+
+
+button{
+  font-family: cursive;
+  opacity: 0.7;
+  margin-bottom: 5px;
+}
+
+button:hover{
+  box-shadow: 0 5px 5px 0 rgba(0,0,0,0.24), 0 17px 50px 0 rgba(0,0,0,0.19);
+  color: lightcyan;
+  background-color: black;
+  border-color: black;
+  cursor: pointer;
+  opacity: 1;
+}
 
 .timer{
   height:fit-content;
@@ -30,101 +91,67 @@ table{
   padding: 10px;
   opacity: 0.8;
 }
-.lives{
-  margin-top: 15px;
-  background-color: transparent;
-  border:none;
-  color:oldlace;
-  display:block;
-}
-
-body{
-  text-align: center;
-  font-family: cursive;
-  background-image: url(../photos/field.jpg);
-  background-size: cover;
-  height: 100vh;
-}
-
-button{
-  font-family: cursive;
-  opacity: 0.7;
-  margin-bottom: 5px;
-}
-
-button:hover{
-  box-shadow: 0 5px 5px 0 rgba(0,0,0,0.24), 0 17px 50px 0 rgba(0,0,0,0.19);
-  color: lightcyan;
-  background-color: black;
-  border: none;
-  cursor: pointer;
-  opacity: 1;
-}
-.hint{
-  margin: auto;
-  margin-top: 10px;
-  background-color: transparent;
-  border:none;
-  color:oldlace;
-  display: block;
-}
 
 #shown{
   background-color: grey;
-  
 }
 
 #flaged{
   background-color: red;
 }
-/* h1{
-  margin-bottom: 5px;
-} */
+
 h2{
   color: aliceblue;
   display: none;
-  font-size: xx-large;
 }
 h3{
   color: aliceblue;
-  font-size: xx-large;
   display: none;
 }
-.smily{
-  height:fit-content;
-  width:fit-content;
-  background-color: aliceblue;
-  opacity: 0.8;
+
+.undo{
+  display: block;
   margin: auto;
-  margin-bottom: 10px;
-  margin-top: 10px;
-  padding: 10px;
-  border-radius: 50%;
+  margin-bottom: 15px;
 }
 
-.smily:hover{
-  cursor: pointer;
-  background-color: black;
+.floatersLeft{
+  float: left;
+  margin-left: auto;
+  margin-right: 0;
 }
-.bestScore{
-  height:fit-content;
-  width:fit-content;
+
+.floatersRight{
+  size: 10px;
+  float: right;
   margin: auto;
-  margin-top: 5px;
-  background-color: black;
-  color: lightcyan;
-  opacity: 0.8;
-  padding-left: 3px;
-  padding-right: 3px;
-  margin-bottom: 5px;
 }
 
 .safe{
-  margin: auto;
-  margin-top: 5px;
-  margin-bottom: 5px;
-  background-color: transparent;
+  height: 30px;
+  width: 170px;
   border:none;
-  color:oldlace;
   display:block;
+  margin-left: 70px;
+}
+
+
+.hint{
+  height: 30px;
+  width: 170px;
+  border:none;
+  display: block;
+  margin-left: 70px;
+}
+
+.manual{
+  height: 30px;
+  width: 170px;
+  margin-right: 70px;
+}
+
+.sevenBoom{
+  height: 30px;
+  width: 170px;
+  margin-right: 70px;
 }
